Add callbacks to close() (XCC)
Akaros has various utilities in userspace that operate on FDs, but those
facilities are in the kernel in other OSs.  These facilities would like to
know when the FD is closed.

Rebuild glibc.

Signed-off-by: Barret Rhoden <brho@cs.berkeley.edu>

--- a/tools/compilers/gcc-glibc/glibc-2.19-akaros/sysdeps/akaros/Makefile
+++ b/tools/compilers/gcc-glibc/glibc-2.19-akaros/sysdeps/akaros/Makefile
@@ -55,8 +55,10 @@ endif
 # User FDs
 ifeq ($(subdir),stdlib)
 sysdep_routines += user_fd
+sysdep_routines += close_cb
 endif
 sysdep_headers += sys/user_fd.h
+sysdep_headers += sys/close_cb.h
 # Epoll: uses User FDs, implemented in iplib
 sysdep_headers += sys/epoll.h bits/epoll.h
 
